--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+/**
+ * index.scss
+ * - Add any styles you want here!
+ */
+
+
+ body {
+    background: #032a87;
+  }
+  
 .gradient-background {
     background: linear-gradient(300deg, #0596d2, #032a87, #03cbf0);
     background-size: 180% 180%;
@@ -14,413 +24,265 @@
     100% {
       background-position: 0% 50%;
     }
-  }
-  
+  } 
 
-@media screen  and (max-width: 576px) {
-    .logo-img {
-        height: 80px;
-        padding-left: 1rem;
-    }
+#cont1 {
+    display: flex;
+    justify-content: center;
+    padding-top: 3rem;
+}  
 
-    .slogan {
-      display: none;
-    }
-    
-    h1 {
-      letter-spacing: 0.25rem;
-    }
-    
-    .hr1 {
-      width: 50%;
-      margin-left: 25%;
-      border-top: 3px solid ;
-    }
-
-    .hr2 {
-      display: none;
-    }
-
-    .card-img-top {
-      height: 60px;
-      width: 60px;
-    }
-
-    #features, #prep {
-      background-color: #f0f8ff69;
-      border-radius: 30px;
-    }
-
-    #dev-stack {
-      color: #03CBF0;
-    }
-    .text {
-      color:#03CBF0
-    }
-    .textw {
-      color: white;
-    }
-    .meeting {
-      border-radius: 40px;
-
-    }
+/* main-header start */
+[data-target="#mainMenu"] {
+  position: relative;
+  z-index: 999;
 }
 
-@media screen and (min-width: 577px) and (max-width: 768px) {
-  .navbar-brand {
-    display: flex;
-    align-items: center;
-  }
-  
-  .logo-img {
-    height: 100px;
-    padding-left: 2rem;
-  }
-  
-  .slogan {
-    padding-left: 10px;
-  }
-
-  .logo-span {
-    display: inline-block;
-    margin-top: 15px;
-    margin-left: 10px;
-  }
-  
-  h1 {
-    letter-spacing: 0.25rem;
-  }
-  
-  .hr1 {
-    width: 50%;
-    margin-left: 25%;
-    border-top: 3px solid;
-  }
-
-  .hr2 {
-    display: none;
-  }
-  
-  .card-img-top {
-    height: 60px;
-    width: 60px;
-  }
-  
-  #features,
-  #prep {
-    background-color: #f0f8ff69;
-    border-radius: 30px;
-  }
-  
-  #dev-stack {
-    color: #03CBF0;
-  }
-  
-  .text {
-    color: #03CBF0;
-  }
-  
-  .textw {
-    color: white;
-  }
-  .meeting {
-    border-radius: 40px;
-  }
+#mainMenu li > a {
+  font-size: 12px;
+  letter-spacing: 1px;
+  color: #fff;
+  font-weight: 400;
+  position: relative;
+  z-index: 1;
+  text-decoration: none;
 }
 
-@media screen and (min-width: 769px) and (max-width: 992px) {
-  .navbar {
-    margin-top: 50px;
-  }
-  .navbar-brand {
-    display: flex;
-    align-items: center;
-  }
-  
-  .logo-img {
-    height: 100px;
-    padding-left: 2rem;
-  }
-  
-  .slogan {
+.main-header.fixed-nav #mainMenu li > a {
+  color: #fff;
+  text-decoration: none;
+}
+
+#mainMenu li:not(:last-of-type) {
+  margin-right: 30px;
+}
+
+#mainMenu li > a::before {
+  position: absolute;
+  content: "";
+  width: calc(100% - 1px);
+  height: 1px;
+  background: #fff;
+  bottom: -6px;
+  left: 0;
+
+  -webkit-transform: scale(0, 1);
+  -ms-transform: scale(0, 1);
+  transform: scale(0, 1);
+  -webkit-transform-origin: right center;
+  -ms-transform-origin: right center;
+  transform-origin: right center;
+  z-index: -1;
+
+  -webkit-transition: transform 0.5s ease;
+  transition: transform 0.5s ease;
+}
+
+#mainMenu li > a:hover::before,
+#mainMenu li > a.active::before {
+  -webkit-transform: scale(1, 1);
+  -ms-transform: scale(1, 1);
+  transform: scale(1, 1);
+  -webkit-transform-origin: left center;
+  -ms-transform-origin: left center;
+  transform-origin: left center;
+}
+
+.main-header.fixed-nav #mainMenu li > a::before {
+  background: #000;
+}
+
+.main-header {
+  position: relative;
+  left: 0;
+  z-index: 99;
+  width: 100%;
+  height: 500px;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.main-header.fixed-nav {
+  top: 0;
+  background: #fff;
+  -webkit-box-shadow: 0 8px 12px -8px rgba(0, 0, 0, 0.09);
+  box-shadow: 0 8px 12px -8px rgba(0, 0, 0, 0.09);
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.main-header.fixed-nav .navbar-brand > img:last-of-type {
+  display: block;
+}
+
+.main-header.fixed-nav .navbar-brand > img:first-of-type {
+  display: none;
+}
+.navbar-brand {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  margin-right: 3.5rem;
+}
+
+.navbar-brand > span {
     padding-left: 10px;
+}
+
+.main-header .navbar-brand img {
+  max-width: 70px;
+  animation: fadeInLeft 0.4s both 0.4s;
+}
+/* main-header end */
+@media (max-width: 991px) {
+  /*header starts*/
+  .collapse.in {
+    display: block !important;
+    padding: 0;
+    clear: both;
   }
 
-  .logo-span {
-    display: inline-block;
-    margin-top: 15px;
-    margin-left: 10px;
+  .navbar-toggler {
+    margin: 0;
+    padding: 0;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 25px;
+    right: 0;
+    border: none;
+    border-radius: 0;
+    outline: none !important;
   }
 
-  .navbar-collapse {
-    margin-left: 10%;
-  }
-  
-  h1 {
-    letter-spacing: 0.25rem;
-  }
-  
-  .hr1 {
-    display: none;
-  }
-  
-  .title {
+  .main-header .navbar {
+    float: none;
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
     text-align: center;
-    padding-top: 10px;
-    padding-bottom: 50px;
   }
 
-  .card-img-top {
-    height: 60px;
-    width: 60px;
-  }
-  
-  #features,
-  #prep {
-    background-color: #f0f8ff69;
-    border-radius: 30px;
-  }
-  
-  #dev-stack {
-    color: #03CBF0;
-  }
-  
-  .text {
-    color: #03CBF0;
-  }
-  
-  .textw {
-    color: white;
+  .main-header .navbar-nav {
+    margin-top: 70px;
   }
 
-  .meeting {
-    border-radius: 40px;
-    padding-bottom: 0px;
-  }
-  
-}
-
-@media screen and (min-width: 993px) and (max-width: 1200px) {
-  .navbar {
-    margin-top: 50px;
-  }
-  .navbar-brand {
-    display: flex;
-    align-items: center;
-  }
-  
-  .logo-img {
-    height: 100px;
-    padding-left: 2rem;
-  }
-  
-  .slogan {
-    padding-left: 10px;
-  }
-
-  .logo-span {
-    display: inline-block;
-    margin-top: 15px;
-    margin-left: 10px;
-  }
-
-  .navbar-collapse {
-    margin-left: 15%;
-  }
-  
-  h1 {
-    letter-spacing: 0.25rem;
-  }
-  
-  .hr1 {
-    display: none;
-  }
-  
-  .title {
+  .main-header .navbar-nav li .nav-link {
     text-align: center;
-    padding-top: 10px;
-    padding-bottom: 50px;
+    padding: 20px 15px;
+    border-radius: 0px;
   }
 
-  .card-img-top {
-    height: 60px;
-    width: 60px;
-  }
-  
-  #features,
-  #prep {
-    background-color: #f0f8ff69;
-    border-radius: 30px;
-    margin-top: 100px;
-  }
-  
-  #dev-stack {
-    color: #03CBF0;
-  }
-  
-  .text {
-    color: #03CBF0;
-  }
-  
-  .textw {
-    color: white;
+  /**/
+  .main-header .navbar-toggler .icon-bar {
+    background-color: #fff;
+    margin: 0 auto 6px;
+    border-radius: 0;
+    width: 30px;
+    height: 3px;
+    position: absolute;
+    right: 0;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
   }
 
-  .meeting {
-    border-radius: 40px;
-    margin-top: 50px;
-    padding-bottom: 0px;
+  .main-header .navbar .navbar-toggler .icon-bar:first-child {
+    margin-top: 3px;
   }
 
-  
+  .main-header .navbar-toggler .icon-bar-1 {
+    width: 10px;
+    top: 0px;
+  }
+
+  .main-header .navbar-toggler .icon-bar-2 {
+    width: 16px;
+    top: 12px;
+  }
+
+  .main-header .navbar-toggler .icon-bar-3 {
+    width: 20px;
+    top: 21px;
+  }
+
+  .main-header .current .icon-bar {
+    margin-bottom: 5px;
+    border-radius: 0;
+    display: block;
+  }
+
+  .main-header .current .icon-bar-1 {
+    width: 18px;
+  }
+
+  .main-header .current .icon-bar-2 {
+    width: 30px;
+  }
+
+  .main-header .current .icon-bar-3 {
+    width: 10px;
+  }
+
+  .main-header .navbar-toggler:hover .icon-bar {
+    background-color: #fff;
+  }
+
+  .main-header .navbar-toggler:focus .icon-bar {
+    background-color: #fff;
+  }
+
+  /*header ends*/
 }
 
-@media screen and (min-width: 1201px) and (max-width: 1400px) {
-  .navbar {
-    margin-top: 50px;
-  }
-  .navbar-brand {
-    display: flex;
-    align-items: center;
-  }
-  
-  .logo-img {
-    height: 100px;
-    padding-left: 2rem;
-  }
-  
-  .slogan {
-    padding-left: 10px;
+.container-fluid {
+    width: 97%;
+}
+
+.textw {
+    color: white;
+}
+
+.text {
+    color:#03CBF0
   }
 
-  .logo-span {
-    display: inline-block;
-    margin-top: 15px;
-    margin-left: 10px;
-  }
-
-  .navbar-collapse {
+#hr-1 {
+    width: 100px;
     margin-left: 20%;
-  }
-  
-  h1 {
-    letter-spacing: 0.25rem;
-  }
-  
-  .hr1 {
-    display: none;
-  }
-  
-  .title {
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 50px;
-  }
+}
 
-  .card-img-top {
+#features {
+    background-color: #f0f8ff67;
+    border-radius: 50px;
+    padding: 50px 20px;
+}
+
+.feature {
+    background-color: #f0f8ff47;
+    border-radius: 25px;
+    padding: 20px;
+    height: 100%;
+}
+
+.feature:hover {
+    background-color: #f0f8ff87;
+}
+
+.feature > img {
+    margin-bottom: 1rem;
+}
+
+#stack {
+    padding: 50px 20px;
+}
+.card-img-top {
     height: 60px;
     width: 60px;
-  }
-  
-  #features,
-  #prep {
-    background-color: #f0f8ff69;
-    border-radius: 30px;
-    margin-top: 100px;
-  }
-  
-  #dev-stack {
-    color: #03CBF0;
-  }
-  
-  .text {
-    color: #03CBF0;
-  }
-  
-  .textw {
-    color: white;
+    border-radius: 5px;
   }
 
-  .meeting {
+.meeting {
     border-radius: 40px;
     margin-top: 50px;
     padding-bottom: 0px;
   }
-
-  
-}
-
-@media screen and (min-width: 1401px) {
-  .navbar {
-    margin-top: 50px;
-  }
-  .navbar-brand {
-    display: flex;
-    align-items: center;
-  }
-  
-  .logo-img {
-    height: 100px;
-    padding-left: 2rem;
-  }
-  
-  .slogan {
-    padding-left: 10px;
-  }
-
-  .logo-span {
-    display: inline-block;
-    margin-top: 15px;
-    margin-left: 10px;
-  }
-
-  .navbar-collapse {
-    margin-left: 26%;
-  }
-  
-  h1 {
-    letter-spacing: 0.25rem;
-  }
-  
-  .hr1 {
-    display: none;
-  }
-  
-  .title {
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 50px;
-  }
-
-  .card-img-top {
-    height: 60px;
-    width: 60px;
-  }
-  
-  #features,
-  #prep {
-    background-color: #f0f8ff69;
-    border-radius: 30px;
-    margin-top: 100px;
-  }
-  
-  #dev-stack {
-    color: #03CBF0;
-  }
-  
-  .text {
-    color: #03CBF0;
-  }
-  
-  .textw {
-    color: white;
-  }
-
-  .meeting {
-    border-radius: 40px;
-    margin-top: 50px;
-    padding-bottom: 0px;
-  }
-
-  
-}
